# grape-berry-estimation-demo-v2

./: .gitattributes  .gitignore  CORRECCION_LFS.md  README.md  audit_evaluation_pipeline.md  pipeline.py  preparar_commit_version_fusion.sh  pyproject.toml  requirements.txt  vistas.md
app_metrics_detection/: .gitattributes  .gitignore  LICENSE  README.md  README_FORENSE.md  README_NATIVE_ANDROID_CPP.md  TERMS_AND_CONDITIONS.md  build.gradle.kts  gradle.properties  keystore.properties  keystore.properties.example  local.properties  local.properties.example  nul  reporte_forense_maxi.md  reset_emulator_install.sh  settings.gradle.kts
app_metrics_detection/.ai/: agents  prompts  skills  templates  tools
app_metrics_detection/app/: build.gradle.kts  proguard-rules.pro
app_metrics_detection/app/release/: output-metadata.json
app_metrics_detection/app/release/baselineProfiles/0/: app-release.dm
app_metrics_detection/app/release/baselineProfiles/1/: app-release.dm
app_metrics_detection/app/src/androidTest/java/com/gaiaspa/metrics_detection/: ExampleInstrumentedTest.kt  InferenceParityTest.kt
app_metrics_detection/app/src/debug/: AndroidManifest.xml
app_metrics_detection/app/src/main/: AndroidManifest.xml
app_metrics_detection/app/src/main/assets/weights/: README_runtime.txt  hist_model.onnx  manifest.json  qty_model.onnx  unified_runtime.onnx
app_metrics_detection/app/src/main/assets/weights/modelos/: hist_rgbdt_bimodal.onnx  qty_model_rgbdt.onnx
app_metrics_detection/app/src/main/cpp/: CMakeLists.txt  grape_pipeline_jni.cpp
app_metrics_detection/app/src/main/cpp/c_code/: main.cpp
app_metrics_detection/app/src/main/cpp/include/: grape_pipeline_config.hpp  grape_pipeline_core.hpp  grape_pipeline_onnx.hpp  grape_pipeline_postprocess.hpp  grape_pipeline_preprocess.hpp  grape_pipeline_types.hpp
app_metrics_detection/app/src/main/cpp/jni/: grape_pipeline_jni.cpp
app_metrics_detection/app/src/main/cpp/src/: grape_pipeline_core.cpp  grape_pipeline_onnx.cpp  grape_pipeline_postprocess.cpp  grape_pipeline_preprocess.cpp
app_metrics_detection/app/src/main/java/com/gaiaspa/metrics_detection/: AcademicDemoAgreementDialog.kt  BatchProcessor.kt  DebugBatchActivity.kt  FeatureFlags.kt  LauncherActivity.kt  MainActivity.kt  MetricsDetectionApp.kt  utils.kt
app_metrics_detection/app/src/main/java/com/gaiaspa/metrics_detection/auth/: LoginActivity.kt  RecoveryActivity.kt  RegisterActivity.kt
app_metrics_detection/app/src/main/java/com/gaiaspa/metrics_detection/depth_estimation/: BitmapUtils.kt  DrawingOverlay.kt  Logger.kt  (+1 more)
app_metrics_detection/app/src/main/res/color/: danger_red.xml  nav_item_color.xml  switch_thumb.xml  switch_track.xml
app_metrics_detection/app/src/main/res/drawable/: bg_chip_error.xml  bg_chip_fused.xml  bg_chip_info.xml  bg_chip_pending.xml  bg_circle.xml  bg_histogram_panel.xml  bg_image_overlay_actions.xml  bg_photo_panel.xml  bg_result_panel.xml  bg_review_badge.xml  bg_tooltip.xml  circle_shape.xml  edittext_background.xml  ic_account_circle.xml  ic_app_logo.xml  ic_arrow_back.xml  ic_calendar.xml  ic_camera.xml  ic_clock.xml  ic_close.xml  ic_cloud.xml  ic_cloud_done.xml  ic_cloud_off.xml  ic_default_profile.xml  ic_delete.xml  ic_dropdown.xml  ic_email.xml  ic_expand_less.xml  ic_expand_more.xml  ic_gallery.xml  ic_history.xml  ic_home.xml  ic_image.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_password.xml  ic_patreon.xml  ic_person.xml  ic_phone.xml  ic_playlist_add.xml  (+6 more)
app_metrics_detection/app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_recovery.xml  activity_register.xml  dialog_loading.xml  dialog_progress.xml  fragment_fullscreen_image.xml  fragment_history.xml  fragment_home.xml  fragment_lote_detail.xml  fragment_profile.xml  fragment_step1.xml  fragment_step2.xml  fragment_support.xml  item_image.xml  item_image_2.xml  item_image_prediction.xml  item_image_prediction_detail.xml  item_lote.xml  item_lote_history.xml  view_histogram_tooltip.xml
app_metrics_detection/app/src/main/res/menu/: menu_bottom_nav.xml  menu_history.xml  menu_share.xml
app_metrics_detection/app/src/main/res/navigation/: nav_graph.xml
app_metrics_detection/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app_metrics_detection/app/src/main/res/values-en/: strings.xml
app_metrics_detection/app/src/main/res/values-night/: colors.xml  themes.xml
app_metrics_detection/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app_metrics_detection/app/src/test/java/com/gaiaspa/metrics_detection/: ExampleUnitTest.kt
app_metrics_detection/debug/: debug_kotlin.json  debug_python.json  python_run_output.txt
app_metrics_detection/docs/: README_AUDIT_REPORT.md
app_metrics_detection/gradle/: libs.versions.toml
app_metrics_detection/gradle/wrapper/: gradle-wrapper.properties
app_metrics_detection/imagenesparatest/: README.md  eval_jni_vs_gt.py  manifest_subsample.csv  run_kotlin_emulator_batch.ps1
app_metrics_detection/imagenesparatest/eval_results/: comparativa_final_run_20260401_023511_vs_antiguo.csv  comparativa_run_20260401_023511_vs_run_20260401_004630.csv
app_metrics_detection/imagenesparatest/eval_results/run_20260401_004630/: audit_detallada.csv  resumen_variedades.csv
app_metrics_detection/imagenesparatest/eval_results/run_20260401_023511/: audit_detallada.csv  super_audit_detallada.csv  super_audit_por_variedad.csv
app_metrics_detection/imagenesparatest/eval_results/run_20260401_034849/: audit_FINAL_global_triple.csv  audit_FINAL_variedad_triple.csv  audit_FORENSE_detallada.csv  audit_TRIPLE_global.csv  audit_TRIPLE_variedad.csv  audit_detallada_ACTUAL.csv  audit_detallada_ACTUAL_vs_CSV.csv  resumen_comparativo_AB.csv
app_metrics_detection/scripts/: prepare_native_deps.ps1  prepare_native_deps_linux.sh  run_kotlin_emulator_batch_linux.sh
app_screenshots/: README.md
c_code/: CMakeLists.txt  main.cpp
data/: labels_v4.csv
imagenesparatest/: run_kotlin_emulator_batch.ps1
keystores/: key1.jks
weights/: best_model_5ch_residual.onnx
(+86 files in other folders)
