[project]
name = "optimizacion"
version = "0.1.0"
description = "Pipeline de optimización para detección de uvas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
]
